fix: prevent unreadable text when using inline code with admonition headers (#1603)
* Some cases of using inline code in admonition headers like light theme
and errors or night theme and warnings would cause make the code be too
bland (gray) for the white background. Forcing the inline code tag color
black when showing in the admonition header seems to fix it.

--- a/assets/css/content/admonition.css
+++ b/assets/css/content/admonition.css
@@ -94,4 +94,5 @@
 .content-inner blockquote:is(.warning, .error, .info, .neutral, .tip) code {
   background-color: var(--inlineCodeBackground);
   border: 1px solid var(--inlineCodeBorder);
+  color: var(--black);
 }
